chore: atualizando codigo e removendo metodos do controller que não são mais utilizados.